// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package proto;
option go_package = "./proto";

message InitRequest {
    string pidFilePath = 1;
}

message PIDFilePathResponse {
    string value = 1;
}

message Empty {}

service PID {
    rpc Init(InitRequest) returns (Empty);
    rpc PIDFilePath(Empty) returns (PIDFilePathResponse);
}
